--- a/src/components/ProjectsPageComp/ProjectBtn/style.module.scss
+++ b/src/components/ProjectsPageComp/ProjectBtn/style.module.scss
@@ -1,6 +1,10 @@
 @import '../../../styles/colors.scss';
 
 .root {
+  display: inline-block;
+}
+
+.content {
   border: 1px $grey-blue solid;
   width: 250px;
   height: 150px;
@@ -11,6 +15,7 @@
   cursor: pointer;
   transition: 0.5s;
   position: relative;
+
   &:hover {
     background-color: $light-blue;
   }
@@ -40,7 +45,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: .3s;
+  transition: 0.3s;
   &:hover {
     transform: scale(1.2);
   }
